add routing, make more REST-like
